--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,8 +1,16 @@
 // Colors
 
-$purple-50: #fbdfff;
-$purple-100: #ddc8ff;
+$purple: #ddc8ff; //lavander
+$green: #bafda2; //lavander
+$pink: #fbdfff;
+$pink-200: #ffc0ca;
+$white-100: #ffffff; //white
+$white-200: #fff8f0; //clay
+$black-100: #313131; //charcoal
+$black-200: #000000; //afro-american
 
-$yellow-100: #fff8f0;
+//Fonts
 
-$green: #bafda2;
+// Easing
+
+$easing: cubic-bezier(0.46, 0.03, 0.52, 0.96);
