--- a/styles/abstracts/_global.scss
+++ b/styles/abstracts/_global.scss
@@ -1,9 +1,29 @@
+@use "../abstracts/fonts";
+@use "../abstracts/variables";
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.25rem;
+  overflow-x: hidden;
+}
+
+h1,
+h2 {
+  font-family: "ClashDisplay-Semibold", sans-serif;
+}
+
+h3,
+h4 {
+  font-family: "ClashDisplay-Medium", sans-serif;
+}
+
 h1 {
   font-size: clamp(3rem, 4vw + 1rem, 4rem);
 }
 
 h2 {
   font-size: clamp(2.5rem, 4vw + 1rem, 3rem);
+  font-weight: 500;
 }
 
 h3 {
@@ -12,4 +32,15 @@ h3 {
 
 h4 {
   font-size: 1.25rem;
+}
+
+a {
+  text-decoration: none;
+  color: variables.$black-200;
+}
+
+.container {
+  max-width: 71.25rem;
+  margin: 0 auto;
+  padding: 0rem 1.5rem;
 }
