--- a/styles/abstracts/_reset.scss
+++ b/styles/abstracts/_reset.scss
@@ -5,6 +5,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -36,4 +37,10 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+}
+
+ul[class] {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
