--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -38,12 +39,56 @@ h6 {
   overflow-wrap: break-word;
 }
 
+ul[class] {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@font-face {
+  font-family: "ClashDisplay-Regular";
+  src: url("../fonts/ClashDisplay-Regular.woff2") format("woff2"), url("../fonts/ClashDisplay-Regular.woff") format("woff"), url("../fonts/ClashDisplay-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Medium";
+  src: url("../../assets/fonts/ClashDisplay-Medium.woff2") format("woff2"), url("../../fonts/ClashDisplay-Medium.woff") format("woff"), url("../../fonts/ClashDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ClashDisplay-Semibold";
+  src: url("../../assets/fonts/ClashDisplay-Semibold.woff2") format("woff2"), url("../../fonts/ClashDisplay-Semibold.woff") format("woff"), url("../../fonts/ClashDisplay-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.25rem;
+  overflow-x: hidden;
+}
+
+h1,
+h2 {
+  font-family: "ClashDisplay-Semibold", sans-serif;
+}
+
+h3,
+h4 {
+  font-family: "ClashDisplay-Medium", sans-serif;
+}
+
 h1 {
   font-size: clamp(3rem, 4vw + 1rem, 4rem);
 }
 
 h2 {
   font-size: clamp(2.5rem, 4vw + 1rem, 3rem);
+  font-weight: 500;
 }
 
 h3 {
@@ -52,4 +97,70 @@ h3 {
 
 h4 {
   font-size: 1.25rem;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.container {
+  max-width: 71.25rem;
+  margin: 0 auto;
+  padding: 0rem 1.5rem;
+}
+
+.main-header {
+  padding: 1.5rem 0rem;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+  background-color: #fff8f0;
+  position: relative;
+}
+
+.main-header-container,
+.nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-list {
+  font-family: "ClashDisplay-Medium", sans-serif;
+  font-size: 1.25rem;
+  gap: 1.5rem;
+}
+
+.nav-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: none;
+}
+
+@media (width <= 950px) {
+  .nav-button {
+    display: block;
+    cursor: pointer;
+  }
+  .nav-list {
+    position: absolute;
+    top: calc(6rem - 4px);
+    left: 0;
+    right: 0;
+    width: 100%;
+    min-height: calc(100dvh - 6rem);
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff8f0;
+    font-size: 2.25rem;
+    gap: 2rem;
+    transform: translateX(100%);
+    transition: transform 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
+  }
+  .nav-item {
+    transform: translateX(2rem);
+    opacity: 0;
+    transition: transform 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96), opacity 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
+  }
 }/*# sourceMappingURL=style.css.map */
