--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -66,10 +67,6 @@ ul[class] {
   font-display: swap;
   font-style: normal;
 }
-html {
-  overflow-x: hidden;
-}
-
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.25rem;
