--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,3 +2,5 @@
 @use "./abstracts/global";
 @use "./abstracts/fonts";
 @use "./components/nav";
+@use "./components/hero";
+@use "./components/buttons";
