--- a/styles/abstracts/_fonts.scss
+++ b/styles/abstracts/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "ClashDisplay-Regular";
-  src: url("../fonts/ClashDisplay-Regular.woff2") format("woff2"),
+  src: url("../../assets/fonts/ClashDisplay-Regular.woff2") format("woff2"),
     url("../fonts/ClashDisplay-Regular.woff") format("woff"),
     url("../fonts/ClashDisplay-Regular.ttf") format("truetype");
   font-weight: 400;
