--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -7,6 +6,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -48,7 +48,7 @@ ul[class] {
 
 @font-face {
   font-family: "ClashDisplay-Regular";
-  src: url("../fonts/ClashDisplay-Regular.woff2") format("woff2"), url("../fonts/ClashDisplay-Regular.woff") format("woff"), url("../fonts/ClashDisplay-Regular.ttf") format("truetype");
+  src: url("../../assets/fonts/ClashDisplay-Regular.woff2") format("woff2"), url("../fonts/ClashDisplay-Regular.woff") format("woff"), url("../fonts/ClashDisplay-Regular.ttf") format("truetype");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -83,8 +83,17 @@ h4 {
   font-family: "ClashDisplay-Medium", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1;
+}
+
 h1 {
   font-size: clamp(3rem, 4vw + 1rem, 4rem);
+  margin-bottom: 0.75rem;
+  line-height: 1.2;
 }
 
 h2 {
@@ -103,6 +112,16 @@ h4 {
 a {
   text-decoration: none;
   color: #000000;
+}
+
+.body-l-medium {
+  font-family: "ClashDisplay-Medium", sans-serif;
+  font-size: 1.5rem;
+}
+
+.body-l {
+  font-family: "ClashDisplay-Regular", sans-serif;
+  font-size: 1.5rem;
 }
 
 .container {
@@ -158,10 +177,93 @@ a {
     gap: 2rem;
     transform: translateX(100%);
     transition: transform 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
+    z-index: 100;
   }
   .nav-item {
     transform: translateX(2rem);
     opacity: 0;
     transition: transform 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96), opacity 300ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
   }
+}
+.hero-section {
+  background-color: #ddc8ff;
+  padding: 2.5rem 0rem;
+}
+
+.hero-content {
+  display: flex;
+  align-items: center;
+  background-color: #fff8f0;
+  padding: 4.5rem 4.375rem;
+  border-radius: 5rem;
+}
+
+.hero-content-info .body-l {
+  max-width: 30ch;
+}
+.hero-content-info .primary-button {
+  margin-top: 3.375rem;
+}
+
+.hero-section-image {
+  padding-right: 2.5rem;
+  position: relative;
+  min-width: 25vw;
+}
+.hero-section-image .img-oana {
+  border: 25px solid #c5a1ff;
+  border-radius: 100vw 100vw 0vw 0vw;
+  position: relative;
+  z-index: 1;
+}
+.hero-section-image .star {
+  position: absolute;
+  top: -3rem;
+  left: -3rem;
+  transition: all 5s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+}
+.hero-section-image .arrow {
+  position: absolute;
+  right: 0;
+  top: -3rem;
+}
+.hero-section-image:hover .star {
+  rotate: 360deg;
+}
+
+@media (width <= 950px) {
+  .hero-content {
+    flex-wrap: wrap-reverse;
+    padding: 3.75rem 1.5rem;
+  }
+  .hero-section-image {
+    max-width: 16rem;
+    margin-bottom: 2rem;
+  }
+  .hero-section-image .img-oana {
+    border-width: 0.75rem;
+  }
+  .hero-section-image .star {
+    max-width: 4rem;
+    left: 0;
+    top: -1rem;
+  }
+  .hero-section-image .arrow {
+    max-width: 7.5rem;
+    right: 1rem;
+    top: -1rem;
+  }
+}
+.primary-button,
+.secondary-button {
+  padding: 1.625rem 3.125rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border: 3px solid #313131;
+  border-radius: 100vw;
+  font-family: "ClashDisplay-Medium", sans-serif;
+  font-size: 1.5rem;
+  background-color: transparent;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
